--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,9 +1,20 @@
 .header{
     background-color: #f7ca18;
-    font-weight: bold;
-    font-size: 2em;
-    height: 100px;
+    height: 150px;
     text-align: center;
     padding: 20px;
     box-shadow: 0 4px 6px rbga(0, 0, 0, 0.2) ;
+    
+}
+
+.h1{
+    font-weight: bold;
+    font-size: 2em;
+    
+}
+
+.h2{
+    font-weight: 500;
+    font-size: 1em;
+    margin-top: 20px;
 }
